# platform.upstream.libtremolo

./: AUTHORS  Makefile.am  Makefile.in  NOTICE  autogen.sh  configure  configure.ac  missing
packaging/: libtremolo.spec
tremolo/: Makefile.am  bitwise.c  codebook.c  codebook.h  codec_internal.h  dsp.c  floor0.c  floor1.c  framing.c  info.c  ivorbiscodec.h  ivorbisfile.h  libtremolo.pc.in  mapping0.c  mdct.c  mdct.h  ogg.h  res012.c  tremolo_vorbisdec.c  tremolo_vorbisdec.h  tremolo_vorbisdec_api.c  tremolo_vorbisdec_api.h  vorbisfile.c
tremolo/ASM/: bitwiseARM.s  dpen.s  mdctARM.s  mdctLARM.s
tremolo/EXCEPTION/: misc.c  testtremor.c
